2apl/resources/tests/Bad/Module Not Found/child.2apl
BeliefUpdates:
  { true }  SetFinished() { done }
  
Beliefs:
  me(child).      	

Plans:
  B(me(Name));
  print(Name);
  print(" is being executed.");
  SetFinished()
  

